# kallax

./: .containerignore  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.claude/skills/onboard-leafchain/: SKILL.md
.github/workflows/: checks.yaml  integration.yaml  lints.yaml  nix.yaml  rust.yaml
cli/: Cargo.toml
cli/src/: consts.rs  error.rs  lib.rs
cli/src/initializer/: config.rs  error.rs  mod.rs  options.rs
cli/src/network_broker/: config.rs  error.rs  lib.rs  mod.rs  options.rs
cli/src/session_key/: config.rs  error.rs  mod.rs  options.rs
cli/src/sidecar/: config.rs  error.rs  mod.rs  options.rs
cli/src/tracker/: config.rs  error.rs  mod.rs  options.rs
cli/src/tracker/chain-specs/: mainnet.leafchain.activa.raw.json  mainnet.leafchain.avatect.raw.json  mainnet.leafchain.ecq.raw.json  mainnet.leafchain.lmt.raw.json  mainnet.leafchain.mirrored-body.raw.json  mainnet.leafchain.thx.raw.json  mainnet.rootchain.raw.json  testnet.leafchain.aether.raw.json  testnet.leafchain.ecq.raw.json  testnet.leafchain.izutsuya.raw.json  testnet.leafchain.lmt.raw.json  testnet.leafchain.mirrored-body.raw.json  testnet.leafchain.sand.raw.json  testnet.leafchain.thx.raw.json  testnet.leafchain.txd.raw.json  testnet.rootchain.raw.json
dev-support/: codespell-ignore
dev-support/containers/: docker-bake.hcl
dev-support/containers/debian/: Containerfile
devshell/: container.nix  default.nix  format.nix  package.nix
example/: network-broker.yaml
example/network-broker/: docker-compose.yaml
examples/network-broker/: docker-compose.yaml  network-broker.yaml
examples/network-broker/chain-specs/: testnet.rootchain.raw.json
initializer/: Cargo.toml
initializer/src/: error.rs  lib.rs
initializer/src/node_key/: error.rs  mod.rs
initializer/src/session_key/: error.rs  key_types.rs  mod.rs
network-broker/: Cargo.toml
network-broker/src/: error.rs  lib.rs  peer_discoverer.rs
primitives/: Cargo.toml
primitives/src/: chain_spec.rs  error.rs  external_endpoint.rs  lib.rs  peer_address.rs
primitives/src/test_data/: chain_spec.json  chain_spec_no_id.json
sidecar/: Cargo.toml
sidecar/src/: diagnostic.rs  error.rs  lib.rs  network_keeper.rs  peer_discoverer.rs
src/: main.rs
tracker/: Cargo.toml
tracker/api-client/: Cargo.toml
tracker/api-client/src/: leafchain_peer.rs  leafchain_spec.rs  lib.rs  rootchain_peer.rs
tracker/api-client/src/error/: leafchain_peer.rs  leafchain_spec.rs  mod.rs  rootchain_peer.rs
tracker/client/: Cargo.toml
tracker/client/src/: error.rs  leafchain_peer.rs  leafchain_spec.rs  lib.rs  rootchain_peer.rs  rootchain_spec.rs
tracker/client/src/chain_spec/: error.rs  mod.rs
tracker/client/src/error/: leafchain_peer.rs  mod.rs  rootchain_peer.rs  rootchain_spec.rs
tracker/client/src/peer/: error.rs  mod.rs
tracker/grpc-client/: Cargo.toml
tracker/grpc-client/src/: leafchain_peer.rs  lib.rs  rootchain_peer.rs
tracker/grpc-client/src/error/: leafchain_peer.rs  leafchain_spec.rs  rootchain_peer.rs  rootchain_spec.rs
tracker/primitives/: Cargo.toml
tracker/primitives/src/: chain_spec.rs  error.rs  lib.rs  peer.rs
tracker/proto/: Cargo.toml  build.rs
tracker/proto/proto/: ChainMetadata.proto  ChainSpec.proto  ExternalEndpoint.proto  LeafchainPeer.proto  LeafchainSpec.proto  Peer.proto  PeerAddress.proto  RootchainPeer.proto  RootchainSpec.proto
tracker/proto/src/: chain_spec.rs  lib.rs  peer.rs  proto.rs
tracker/server/: Cargo.toml
tracker/server/src/: chain_spec.rs  chain_spec_list.rs  error.rs  leafchain_peer.rs  leafchain_spec.rs  lib.rs  peer.rs  peer_address_book.rs  rootchain_peer.rs  rootchain_spec.rs
tracker/server/src/grpc/: leafchain_peer.rs  leafchain_spec.rs  mod.rs  rootchain_peer.rs  rootchain_spec.rs
tracker/server/src/web/: mod.rs
tracker/server/src/web/controller/: diagnostic.rs  mod.rs
tracker/server/src/web/controller/leafchain/: mod.rs  v1.rs
tracker/server/src/web/controller/rootchain/: mod.rs  v1.rs
