[package]
name = "kallax-cli"
description = "Tools for setting up Substrate-based nodes"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures = "0.3"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
# tokio-rustls = { version = "0.24" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = { version = "0.7", optional = true }

clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4" }
exitcode = "1"
snafu = "0.7"

kallax-initializer = { path = "../initializer" }
kallax-sidecar = { path = "../sidecar" }
kallax-tracker-server = { path = "../tracker/server" }

