[package]
name                 = "kallax-cli"
description          = "Tools for setting up Substrate-based nodes"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures = "0.3"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
  "signal",
] }

http = "1.0"

clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
exitcode      = "1"
snafu         = "0.8"

serde      = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

kallax-initializer    = { path = "../initializer" }
kallax-network-broker = { path = "../network-broker" }
kallax-primitives     = { path = "../primitives" }
kallax-sidecar        = { path = "../sidecar" }
kallax-tracker-server = { path = "../tracker/server" }
