[package]
name = "kallax-sidecar"
description = "Kubernetes sidecar for operating Substrate-base node"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tracing = "0.1"

futures = "0.3"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
# tokio-rustls = { version = "0.24" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = { version = "0.7", optional = true }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
