[package]
name = "kallax-sidecar"
description = "Kubernetes sidecar for operating Substrate-base node"
version.workspace = true
authors.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
tracing = "0.1"

futures = "0.3"
tokio = { version = "1", features = [
  # "fs",
  # "io-util",
  # "macros",
  # "net",
  "rt-multi-thread",
  # "signal",
  "sync",
  # "time"
] }
# tokio-rustls = { version = "0.24" }

http = "0.2"

# serde = { version = "1", features = ["derive"] }
# serde_json = { version = "1", optional = true }
# toml = { version = "0.7", optional = true }

snafu = "0.7"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

kallax-primitives = { path = "../primitives" }
kallax-tracker-client = { path = "../tracker/client" }
