[package]
name                 = "kallax-sidecar"
description          = "Kubernetes sidecar for operating Substrate-base node"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing = "0.1"

futures = "0.3"
tokio   = { version = "1", features = ["sync"] }
sigfinn = "0.1"

http = "1.0"

snafu = "0.8"

sp-core              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

kallax-primitives          = { path = "../primitives" }
kallax-tracker-api-client  = { path = "../tracker/api-client" }
kallax-tracker-grpc-client = { path = "../tracker/grpc-client" }
