[package]
name = "kallax-tracker"
description = "Tracker for announcing Substrate-base information"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

futures = "0.3"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
# tokio-rustls = { version = "0.24" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = { version = "0.7", optional = true }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
