[package]
name                 = "kallax-tracker-api-client"
description          = "Tracker API client"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
async-trait = "0.1"

http = "0.2"

openssl = { version = "0.10.35", features = ["vendored"] }

reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }

serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

snafu = "0.7"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

url = "2.4"

kallax-primitives    = { path = "../../primitives" }
kallax-tracker-proto = { path = "../proto" }
