[package]
name                 = "kallax-tracker-api-client"
description          = "Tracker API client"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
async-trait = "0.1"

http = "1.0"

reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }

serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

snafu = "0.8"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

kallax-primitives     = { path = "../../primitives" }
kallax-tracker-proto  = { path = "../proto" }
kallax-tracker-server = { path = "../server" }
