[package]
name = "kallax-tracker-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"

tonic = { version = "0.9", features = ["gzip"] }

http = "0.2"

snafu = "0.7"

kallax-tracker-primitives = { path = "../primitives" }
kallax-tracker-proto = { path = "../proto" }
