[package]
name                 = "kallax-tracker-grpc-client"
description          = "Tracker gRPC client"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
async-trait = "0.1"

tonic = { version = "0.12", features = ["gzip"] }

http = "1.1"

snafu = "0.8"

kallax-primitives    = { path = "../../primitives" }
kallax-tracker-proto = { path = "../proto" }
