[package]
name                 = "kallax-tracker-proto"
description          = "Protobuf of Tracker for announcing Substrate-base information"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
prost       = "0.12"
prost-types = "0.12"
tonic       = { version = "0.12", features = ["gzip"] }

kallax-primitives = { path = "../../primitives" }

[build-dependencies]
prost-build = "0.12"
tonic-build = { version = "0.11", default-features = false, features = [
  "prost",
  "transport",
] }
