[package]
name = "kallax-tracker-server"
description = "Kubernetes sidecar for operating Substrate-base node"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tracing = "0.1"

tokio = { version = "1", features = [
  "rt-multi-thread",
  "sync",
] }

tonic = { version = "0.9", features = ["gzip"] }

sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

snafu = "0.7"

kallax-tracker-primitives = { path = "../primitives" }
kallax-tracker-proto = { path = "../proto" }
