[package]
name = "kallax-tracker-server"
description = "Tracker service for announcing Substrate-base blockchain information"
version.workspace = true
authors.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
tracing = "0.1"

tokio = { version = "1", features = [
  "rt-multi-thread",
  "sync",
] }

tonic = { version = "0.9", features = ["gzip"] }

sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

snafu = "0.7"

kallax-primitives = { path = "../../primitives" }
kallax-tracker-proto = { path = "../proto" }
